--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
+        "src": "/(.*)",
+        "dest": "/api/server.js"
       }
     ]
   }
