--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,10 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "api/**/*.js",
-        "use": "@vercel/node"
-      }
+      { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/api/server.js"
-      }
+      { "src": "/(.*)", "dest": "/server.js" }
     ]
   }
   
